--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ extends root
 
 block content 
   div 
-    h1 Hello World!
+    if !user 
+      h1 Sign up to start chatting!
+    else
+      p Welcome #{user.username}
