--- a/views/locate-users.pug
+++ b/views/locate-users.pug
@@ -1,16 +1,19 @@
 extends root 
 
 block content 
-  form(method='post' action='')
-    p
-      label(for='search') Search Users 
-      input(id='search' name='search' type='search' value=term || '')
-    button Search 
+  if user
+    form(method='post' action='')
+      p
+        label(for='search') Search Users 
+        input(id='search' name='search' type='search' value=term || '')
+      button Search 
 
-  div.users 
-    if users
-      each user in users 
-        p: a(href=user.url) #{user.username}
+    div.users 
+      if users
+        each user in users 
+          p: a(href=user.url) #{user.username}
+  else 
+    p Sign up to access this page.
 
 
    
