add block for scripts

--- a/views/root.pug
+++ b/views/root.pug
@@ -5,6 +5,7 @@ html(lang='en')
     meta(charset='utf-8')
     link(rel='stylesheet' href='/styles/root.css')
     script(src='/scripts/authentication.js' defer)
+    block scripts
   body
     div(id='modals')
       div(id='create-account-div')
