--- a/views/root.pug
+++ b/views/root.pug
@@ -50,6 +50,7 @@ html(lang='en')
             li: button(id='login-btn') Login 
         else 
           p Welcome #{user.username}
+          p: a(href='/users/me') View Profile
           form(method='post' action='/users/logout')
             button(type='submit') Logout
           
