show textual online status until styling can be done

--- a/views/user-profile.pug
+++ b/views/user-profile.pug
@@ -13,6 +13,8 @@ block scripts
 block content 
   if user && profile 
     h1 Profile for #{profile.username}
+    - let displayOnline = profile.public && profile.showOnlineStatus && profile.online
+    p.onlinestatus(class=displayOnline ? 'online' : 'offline') Online
     if user._id.equals(profile._id)
       p: a(href='/users/me/edit') Edit Profile
     if profile.public
