bugfix: textual display of online status based on displayOnline

--- a/views/user-profile.pug
+++ b/views/user-profile.pug
@@ -14,7 +14,7 @@ block content
   if user && profile 
     h1 Profile for #{profile.username}
     - let displayOnline = profile.public && profile.showOnlineStatus && profile.online
-    p.onlinestatus(class=displayOnline ? 'online' : 'offline') Online
+    p.onlinestatus(class=displayOnline == true ? 'online' : 'offline')= displayOnline == true ? 'Online' : 'Offline'
     if user._id.equals(profile._id)
       p: a(href='/users/me/edit') Edit Profile
     if profile.public
