basic view for friends list

--- a/views/friends.pug
+++ b/views/friends.pug
@@ -1,4 +1,7 @@
 extends root 
 
 block content 
-  include includes/friend-list.pug
+  if !user  
+    p Sign up to start chatting! 
+  else
+    include includes/friend-list.pug
