move friendForms mixin to separate file, pass ids to mixin

--- a/views/user-profile.pug
+++ b/views/user-profile.pug
@@ -1,10 +1,6 @@
 extends root 
 
-mixin friendForms(id, btnText)
-  form(id=id)
-    input(type='hidden' name='friendId' value=profile._id)
-    button(type='submit')= btnText
-
+include includes/mixins/friend-form-mixin.pug
 
 block scripts 
   script(src='/scripts/friend_request.js' defer)
@@ -38,14 +34,14 @@ block content
       if user._id.toString() != profile._id.toString()
         if friendStatus == 'sent'
           p Friend request sent 
-          +friendForms('friendship-reject', 'Cancel Friend Request')
+          +friendForms('friendship-reject', 'Cancel Friend Request', profile._id)
         else if friendStatus == 'recieved'
-          +friendForms('friendship-accept', 'Accept Friend Request')
-          +friendForms('friendship-reject', 'Reject Friend Request')
+          +friendForms('friendship-accept', 'Accept Friend Request', profile._id)
+          +friendForms('friendship-reject', 'Reject Friend Request', profile._id)
         else if friendStatus == 'friend'
           p You are friends with this user
-          +friendForms('friendship-reject', 'Remove Friend')
+          +friendForms('friendship-reject', 'Remove Friend', profile._id)
         else 
-          +friendForms('friend-request', 'Add Friend')  
+          +friendForms('friend-request', 'Add Friend', profile._id)  
   else 
     p Sign up to access this page.
