add styles block

--- a/views/root.pug
+++ b/views/root.pug
@@ -4,6 +4,8 @@ html(lang='en')
     title Chat App
     meta(charset='utf-8')
     link(rel='stylesheet' href='/styles/root.css')
+    block styles
+
     script(src='/scripts/authentication.js' defer)
     block scripts
   body
