bring mixins dir up a level, friendForms use class instead of id

--- a/views/mixins/friend-form-mixin.pug
+++ b/views/mixins/friend-form-mixin.pug
@@ -1,4 +1,4 @@
-mixin friendForms(id, btnText, friendId)
-  form(id=id)
+mixin friendForms(className, btnText, friendId)
+  form(class=className)
     input(type='hidden' name='friendId' value=friendId)
     button(type='submit')= btnText
