update reference to friendform mixin; bring scripts block up to friends view

--- a/views/includes/friend-list.pug
+++ b/views/includes/friend-list.pug
@@ -1,7 +1,4 @@
-include ./mixins/friend-form-mixin
-
-block scripts 
-  script(src='/scripts/friend_request.js' defer)
+include ../mixins/friend-form-mixin
 
 div.friends 
   if user.friends.length 
