--- a/views/friends.pug
+++ b/views/friends.pug
@@ -1,5 +1,8 @@
 extends root 
 
+block scripts 
+  script(src='/scripts/friend_request.js' defer)
+  
 block content 
   if !user  
     p Sign up to start chatting! 
