--- a/views/chat-room.pug
+++ b/views/chat-room.pug
@@ -28,5 +28,7 @@ block content
     div(id='users')
       p Users
       ul
+        if chat.owner 
+          li(class='owner')= chat.owner.username
         each allowedUser in chat.allowedUsers
           li= allowedUser.username
