--- a/views/root.pug
+++ b/views/root.pug
@@ -3,6 +3,8 @@ html(lang='en')
   head 
     title Chat App
     meta(charset='utf-8')
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+
     link(rel='stylesheet' href='/styles/root.css')
     block styles
 
