--- a/views/login.pug
+++ b/views/login.pug
@@ -1,18 +1,24 @@
 extends root 
 
-block content 
-  form(method='post' action='/users/login')
-    p
-      label(for='username') Username
-      input(id='username' name='username' type='input')
-    if error && error.username 
-      p #{error.username}
-    p 
-      label(for='password') Password
-      input(id='password' name='password' type='password')
-    if error && error.password 
-      p #{error.password}
+block styles 
+  link(rel='stylesheet' href='/styles/forms.css')
 
-    if error && error.failed
-      p Invalid username or password
-    button(type='submit') Login
+block content 
+  div.form-container
+    form(method='post' action='/users/login')
+      div.form-title Login to start chatting!
+      div.form-field
+        label(for='username') Username
+        input(id='username' name='username' type='input')
+        if error && error.username 
+          p.error #{error.username}
+      div.form-field 
+        label(for='password') Password
+        input(id='password' name='password' type='password')
+        if error && error.password 
+          p.error #{error.password}
+
+      if error && error.failed
+        p.error Invalid username or password
+      div.buttons
+        button.primary-btn(type='submit') Login
