--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -1,9 +1,13 @@
-#modals {
-  display: none;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+* {
+  font-family: 'Roboto';
 }
 
-#modals>div {
+#modals {
+  --modal-background-color: #f8fafc;
   display: none;
+  background-color: #e2e8f0;
 }
 
 #modals.open {
@@ -15,10 +19,104 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(255, 255, 255, .8);
 }
 
-#modals div.active {
-  display: block;
+#modals>div {
+  background-color: var(--modal-background-color);
+  box-shadow: 2px 2px 3px black;
+  border-radius: 20px;
+  display: none;
+  padding: 2rem 3rem;
+  position: relative;
 }
 
+#modals>div.active {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#modals .toolbar {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+#modals .toolbar button {
+  background-color: transparent;
+  border: 0;
+}
+
+html,
+body {
+  height: 100vh;
+}
+
+body {
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: auto 1fr;
+  padding: 0;
+  margin: 0;
+}
+
+header {
+  grid-area: 1 / 1 / 2 / 3;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  padding-bottom: 0;
+}
+
+header .user-options {
+  list-style: none;
+  margin: 0;
+
+  display: flex;
+  gap: 16px;
+  align-self: flex-end;
+  background-color: #cbd5e1;
+
+  padding: 1rem 2rem;
+  padding-bottom: 0;
+
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+}
+
+header .user-options * {
+  font-size: 1rem;
+  background-color: transparent;
+  border: 0;
+  text-decoration: none;
+  color: #1e293b;
+  cursor: pointer;
+}
+nav {
+  grid-area: 2 / 1 / 3 / 2;
+}
+
+header,
+nav {
+  background-color: #e5e7eb;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+nav ul li {
+  padding: 1rem 3rem;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
+.content {
+  grid-area: 2 / 2 / 3 / 3;
+  background-color: #f1f5f9;
+  padding: 1rem 3rem;
+}
