--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -93,12 +93,12 @@ header .user-options * {
   color: #1e293b;
   cursor: pointer;
 }
+
 nav {
   grid-area: 2 / 1 / 3 / 2;
 }
 
-header,
-nav {
+body {
   background-color: #e5e7eb;
 }
 
@@ -118,5 +118,6 @@ nav ul li a {
 .content {
   grid-area: 2 / 2 / 3 / 3;
   background-color: #f1f5f9;
+  border-top-left-radius: 20px;
   padding: 1rem 3rem;
 }
