--- a/public/styles/root.css
+++ b/public/styles/root.css
@@ -59,6 +59,7 @@ body {
   grid-template-columns: auto 1fr;
   padding: 0;
   margin: 0;
+  background-color: #e5e7eb;
 }
 
 header {
@@ -98,10 +99,6 @@ nav {
   grid-area: 2 / 1 / 3 / 2;
 }
 
-body {
-  background-color: #e5e7eb;
-}
-
 nav ul {
   list-style: none;
   padding: 0;
@@ -120,4 +117,5 @@ nav ul li a {
   background-color: #f1f5f9;
   border-top-left-radius: 20px;
   padding: 1rem 3rem;
+  box-shadow: inset 1px 1px 3px #475569;
 }
