rename .form-field to .form-input-field for more specificity

--- a/views/create-account.pug
+++ b/views/create-account.pug
@@ -7,22 +7,22 @@ block content
   div.form-container
     form(method='post' action='/users/create-account')
       div.form-title Create account to start chatting!
-      div.form-field
+      div.form-input-field
         label(for='username') Username
         input(id='username' name='username' type='input' value=newUser ? newUser.username : '')
         if error && error.username
           p #{error.username}
-      div.form-field
+      div.form-input-field
         label(for='email') Email
         input(id='email' name='email' type='email' value=newUser ? newUser.email : '')
         if error && error.email
           p #{error.email}
-      div.form-field
+      div.form-input-field
         label(for='password') Password
         input(id='password' name='password' type='password')
         if error && error.password   
           p #{error.password}
-      div.form-field
+      div.form-input-field
         label(for='confirm_password') Confirm Password
         input(id='confirm_password' name='confirm_password' type='password')
         if error && error.confirm_password 
